# mschema

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: USAGE.md
examples/: demo.sh
examples/basic-workflow/: .schemagen.example.yml  README.md
examples/basic-workflow/ci/: github-actions-drift.yml  github-actions.yml
examples/basic-workflow/schemas/: users.v1.yml  users.v2.yml
examples/schemas/: inventory_items.v1.yml  inventory_items.v2.yml  users.v1.yml  users.v2.yml
src/mongo_schematic/: ai.py  analyze.py  cli.py  config.py  db.py  diff.py  docs_gen.py  drift.py  exceptions.py  hooks.py  indexes.py  migrate.py  models.py  monitor.py  reporting.py  schema_io.py  seed.py  utils.py  validate.py
src/mongo_schematic/codegen/: pydantic.py  typescript.py
tests/: __init__.py  test_config.py  test_diff.py  test_drift.py  test_validate.py
